# xode-blockchain

./: CONTRIBUTING.md  Cargo.toml  README.md
client/: getLatestFinalizedBlockNumber.js
docs/: API.md
node/: Cargo.toml
node/src/: service.rs
pallets/: README.md
pallets/staking/: Cargo.toml  README.md
pallets/staking/src/: benchmarking.rs  lib.rs  tests_audits.rs  tests_calls.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
runtime/src/configs/xcm_config/: asset_matcher.rs  config.rs  mod.rs  trusted_reserve_assets.rs  weight_trader.rs
runtime/src/weights/: mod.rs  pallet_asset_conversion.rs  pallet_asset_conversion_ops.rs  pallet_asset_conversion_tx_payment.rs  pallet_assets_foreign.rs  pallet_assets_local.rs  pallet_assets_pool.rs
zombienet/: zombienet-local.toml
