[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>","Xode DAO <admin@xode.net>"]
homepage = "https://xode.net"
repository = ""
edition = "2021"

[workspace]
members = ["node", "pallets/staking", "runtime"]
resolver = "2"

[workspace.dependencies]
xode-runtime = { path = "./runtime", default-features = false }
pallet-xode-staking = { path = "./pallets/staking", default-features = false }
clap = { version = "4.5.10" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
color-print = { version = "0.3.4" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
cumulus-client-cli = { version = "0.28.0", default-features = false }
cumulus-client-collator = { version = "0.28.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.28.0", default-features = false }
cumulus-client-consensus-common = { version = "0.28.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.24.0", default-features = false }
cumulus-client-service = { version = "0.31.0", default-features = false }
cumulus-primitives-core = { version = "0.23.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.23.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.28.0", default-features = false }
docify = { version = "0.4.1" }
frame-benchmarking = { version = "45.0.2", default-features = false }
frame-benchmarking-cli = { version = "53.0.0", default-features = false }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.26.0" }
log = { version = "0.4.22", default-features = false }
pallet-transaction-payment-rpc = { version = "48.0.0", default-features = false }
polkadot-cli = { version = "31.0.0", default-features = false }
polkadot-primitives = { version = "22.0.0", default-features = false }
prometheus-endpoint = { version = "0.17.0", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = { version = "0.53.0", default-features = false }
sc-chain-spec = { version = "48.0.0", default-features = false }
sc-cli = { version = "0.57.0", default-features = false }
sc-client-api = { version = "44.0.0", default-features = false }
sc-consensus = { version = "0.54.0", default-features = false }
sc-executor = { version = "0.47.0", default-features = false }
sc-network = { version = "0.55.1", default-features = false }
sc-network-sync = { version = "0.54.0", default-features = false }
sc-offchain = { version = "50.0.0", default-features = false }
sc-rpc = { version = "50.0.0", default-features = false }
sc-service = { version = "0.56.0", default-features = false }
sc-sysinfo = { version = "46.0.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-tracing = { version = "44.0.0", default-features = false }
sc-transaction-pool = { version = "44.1.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
serde = { version = "1.0.209", default-features = false }
serde_json = { version = "1.0.127", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-blockchain = { version = "43.0.0", default-features = false }
sp-consensus-aura = { version = "0.46.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keyring = { version = "45.0.0", default-features = false }
sp-keystore = { version = "0.45.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-timestamp = { version = "40.0.0", default-features = false }
sp-staking = { version = "42.1.0", default-features = false }
substrate-frame-rpc-system = { version = "49.0.0", default-features = false }
xcm = { version = "21.0.0", default-features = false, package = "staging-xcm" }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.25.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.25.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "26.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.24.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.25.0", default-features = false }
cumulus-primitives-aura = { version = "0.21.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "16.0.0", default-features = false }
cumulus-primitives-utility = { version = "0.25.0", default-features = false }
frame-executive = { version = "45.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-support = { version = "45.1.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }
hex-literal = { version = "1.1.0", default-features = false }
pallet-aura = { version = "44.0.0", default-features = false }
pallet-authorship = { version = "45.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-collator-selection = { version = "26.0.0", default-features = false }
pallet-message-queue = { version = "48.0.0", default-features = false }
pallet-session = { version = "45.1.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
pallet-xcm = { version = "25.0.0", default-features = false }
parachain-info = { version = "0.25.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "27.1.0", default-features = false }
polkadot-parachain-primitives = { version = "20.0.0", default-features = false }
polkadot-runtime-common = { version = "24.0.0", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
xcm-builder = { version = "25.0.0", default-features = false, package = "staging-xcm-builder" }
xcm-executor = { version = "24.0.0", default-features = false, package = "staging-xcm-executor" }
xcm-runtime-apis = { version = "0.12.0", default-features = false }
substrate-wasm-builder = { version = "31.1.0", default-features = false }
# Assets
pallet-assets = { version = "48.1.0", default-features = false }
# Contracts
sp-std = { version = "14.0.0", default-features = false }
pallet-contracts = { version = "45.0.1", default-features = false }
# Treasury
pallet-indices = { version = "45.0.0", default-features = false }
pallet-asset-rate = { version = "24.0.0", default-features = false }
pallet-treasury = { version = "44.0.0", default-features = false }
# Governance
pallet-collective = { version = "45.0.0", default-features = false }
pallet-membership = { version = "45.0.0", default-features = false }
pallet-preimage = { version = "45.0.0", default-features = false }
pallet-whitelist = { version = "44.0.0", default-features = false }
# Utility
pallet-root-testing = { version = "21.0.0", default-features = false }
pallet-utility = { version = "45.0.0", default-features = false }
# Revive
pallet-revive = { version = "0.12.2", default-features = false }